; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_exr.c_exr_flt2uint.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_exr.c_exr_flt2uint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @exr_flt2uint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exr_flt2uint(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = ashr i32 %5, 23
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp sle i32 %7, 110
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %22

10:                                               ; preds = %1
  %11 = load i32, i32* %4, align 4
  %12 = icmp sge i32 %11, 127
  br i1 %12, label %13, label %14

13:                                               ; preds = %10
  store i32 65535, i32* %2, align 4
  br label %22

14:                                               ; preds = %10
  %15 = load i32, i32* %3, align 4
  %16 = and i32 %15, 8388607
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %3, align 4
  %18 = add nsw i32 %17, 8388608
  %19 = load i32, i32* %4, align 4
  %20 = sub nsw i32 134, %19
  %21 = ashr i32 %18, %20
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %14, %13, %9
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
